--- a/asyncawait.html
+++ b/asyncawait.html
@@ -6,6 +6,7 @@
     <title>async await</title>
   </head>
   <body>
-    <script src="./asyncawait.js"></script>
+    <!-- <script src="./asyncawait.js"></script> -->
+    <script src="./interval.js"></script>
   </body>
 </html>
