--- a/try-catch.html
+++ b/try-catch.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Try-Catch</title>
-    <style></style>
+    <style>
+      body {
+        padding-top: 15rem;
+      }
+      #container {
+        display: flex;
+        margin: 0 auto;
+        align-items: center;
+        justify-content: center;
+        padding: 0 auto;
+      }
+      #age {
+        width: 28rem;
+        height: 2rem;
+      }
+      button {
+        height: 2.3rem;
+      }
+    </style>
   </head>
   <body>
     <section id="container">
